# Aether

./: .devcontainer.json  .gitignore  Aether.cscope_file_list  Aether_build_log.html  CHANGELOG  CMakeLists.txt  Dockerfile  README.md  _config.yml  contributors  find_dependencies.cmake
contribs/lua_cmakelist/: CMakeLists.txt
src/FDTD/modes/: CMakeLists.txt  default_fdtd.cpp  fieldblock_treat.cpp  normal_incidence.cpp  oblique_biphase.cpp  single_particle.cpp
src/FDTD/sensors/: CMakeLists.txt  fieldblock_holder.cpp  s_modes.cpp
src/FDTD/sources/: CMakeLists.txt  sc_bloch.cpp  sources.cpp
src/GL_tools/: CMakeLists.txt  gl_text.cpp  gl_utils.cpp  gl_utils.h  gl_vao.cpp
src/GUI/: CMakeLists.txt  aether.h  gui.h  gui_curve_extractor.cpp  gui_diffract_orders.cpp  gui_diffract_pattern.cpp  gui_effective_model.cpp  gui_enum_choice.h  gui_fd_1ms.cpp  gui_fd_1ms_ha.cpp  gui_fd_1ms_ha_gl.cpp  gui_fresnel.cpp  gui_geometric_gradient.cpp  gui_gl.h  gui_gl_fd.cpp  gui_gl_fd.h  gui_gl_graph.cpp  gui_gl_graph.h  gui_gl_test.cpp  gui_gl_test.h  gui_graph.cpp  gui_graph.h  gui_layerfitter.cpp  gui_material.cpp  gui_matpanel.cpp  gui_matsfitter.cpp  gui_mie.cpp  gui_multilayers.cpp  gui_multilayers_utils.cpp  gui_optical_fibers.cpp  gui_panels_list.cpp  gui_panels_list.h  gui_parametric_interp.cpp  gui_parametric_visualizer.cpp  gui_rsc.cpp  gui_rsc.h  gui_samples_explorer.cpp  gui_spp.cpp  gui_utils.cpp  gui_vector3ctrl.cpp  (+1 more)
src/GUI/Applets/: CMakeLists.txt  gui_curve_extractor.cpp  gui_curve_extractor.h  gui_diffract_orders.cpp  gui_diffract_orders.h  gui_fd_1ms.cpp  gui_fd_1ms_ha.cpp  gui_fd_1ms_ha_gl.cpp  gui_fd_ms.h  gui_geometric_gradient.cpp  gui_geometric_gradient.h  gui_mie.cpp  gui_mie.h  gui_optical_fibers.cpp  gui_optical_fibers.h  gui_parametric_interp.cpp  gui_parametric_interp.h  gui_parametric_visualizer.cpp  gui_parametric_visualizer.h  gui_samples_explorer.cpp  gui_samples_explorer.h  gui_spp.cpp  gui_spp.h
src/GUI/FDTD/: CMakeLists.txt  gui_fdtd.cpp  gui_fdtd.h  gui_fdtd_gl.cpp  gui_fdtd_misc_dialogs.cpp  gui_fdtd_mode_dialog.cpp  gui_fdtd_structdesign.cpp  gui_fdtd_structdesign.h  gui_fdtd_structdesign_panels.cpp  gui_fdtd_structdesign_variables.cpp  gui_fdtd_structdesign_variables.h  gui_fieldblock_explr.cpp  gui_fieldblock_explr.h
src/GUI/Fitter/: CMakeLists.txt  gui_fitter.cpp  gui_fitter.h  gui_fitter_functions.cpp  gui_fitter_functions.h  gui_layerfitter.cpp  gui_layerfitter.h  gui_matpanel.cpp  gui_matsfitter.cpp  gui_matsfitter.h  gui_matspanel.h
src/GUI/Materials/: CMakeLists.txt  gui_material.h  gui_material_editor.cpp  gui_material_editor.h  gui_material_editor_panels.cpp  gui_material_editor_panels.h  gui_material_library.cpp  gui_material_lua.cpp  gui_material_manager.cpp  gui_material_selector.cpp  gui_mini_material_selector.cpp
src/GUI/Selene/: CMakeLists.txt  gui_selene.cpp  gui_selene.h  gui_selene_element.cpp  gui_selene_gl.cpp  gui_selene_gl.h  gui_selene_lua.cpp  gui_selene_materials.cpp  gui_selene_object.cpp  gui_selene_object_mesh.cpp  gui_selene_optimization.cpp  gui_selene_sensor.cpp  gui_selene_sensor.h  gui_selene_source.cpp
src/GUI/Teaching/: CMakeLists.txt  gui_ellifr.cpp  gui_ellifr.h  gui_ellipso3.cpp  gui_ellipso3.h  gui_sem.cpp  gui_sem.h
src/GUI/multilayers/: CMakeLists.txt  gui_multilayers.cpp  gui_multilayers.h  gui_multilayers_lua.cpp  gui_multilayers_utils.cpp  gui_multilayers_utils.h
src/Selene/: CMakeLists.txt  sel_analysis.cpp  sel_irf.cpp  sel_light.cpp  sel_mesh.cpp  sel_obj.cpp  sel_obj_surface.cpp  sel_obj_volume.cpp  selene.cpp  selene.h  selene_mesh.h  selene_primitives.h  selene_rays.cpp  selene_rays.h
src/common/: CMakeLists.txt  bitmap.cpp  bitmap3.h  bspline_int.cpp  bspline_int.h  data_hdl.cpp  data_hdl.h  enum_constants.h  filehdl.cpp  filehdl.h  foctree.cpp  foctree.h  geometry.cpp  geometry.h  grid.h  logger.cpp  logger.h  mathUT.cpp  mathUT.h  math_approx.cpp  math_approx.h  math_bessel.cpp  math_bessel.h  math_optim.cpp  math_optim.h  math_sym.cpp  math_sym.h  mesh_base.cpp  mesh_base.h  mesh_tools.cpp  mesh_tools.h  mini_svg.cpp  mini_svg.h  noise.cpp  noise.h  octree.cpp  octree.h  phys_constants.h  phys_tools.cpp  phys_tools.h  (+15 more)
src/common_optics/: CMakeLists.txt  mie.cpp  mie.h  optical_fibers.cpp  optical_fibers.h
src/fdfd/: CMakeLists.txt  fdfd.cpp  fdfd_mode.cpp  fdfd_sam.cpp  fdfd_solvers.cpp
src/fdtd_core/: CMakeLists.txt  fdtd_core.cpp  fdtd_core_aniso.cpp  fdtd_pml.cpp  fdtd_threads.cpp  fdtd_utils.cpp  mats.cpp  mats_PCRC.cpp  mats_RC.cpp  mats_aniD_const.cpp  mats_ani_const.cpp  mats_const.cpp  mats_levels.cpp
src/fdtd_modes/: CMakeLists.txt  default_fdtd.cpp  normal_incidence.cpp  oblique_biphase.cpp  oblique_rec.cpp  single_particle.cpp
src/lua_interface/: CMakeLists.txt  lua_fd.cpp  lua_fd.h  lua_material.cpp  lua_multilayers.cpp  lua_optim.cpp  lua_optim.h  lua_selene.cpp  lua_selene_element.cpp  lua_selene_light.cpp  lua_structure.cpp
src/materials/: CMakeLists.txt  aniso_retriever.h  dielec_models.cpp  dielec_models.h  material.cpp  material.h
src/math_tools/: CMakeLists.txt  bspline_int.cpp  foctree.cpp  geometry.cpp  mathUT.cpp  math_approx.cpp  math_bessel.cpp  math_optim.cpp  math_sym.cpp  mesh_base.cpp  mesh_tools.cpp  noise.cpp  phys_tools.cpp  polygons_2D.cpp  ray_intersect.cpp  spectral_color.cpp  string_tools.cpp  vector23.cpp  voronoi.cpp
src/multilayers/: CMakeLists.txt  berreman_strat.cpp  berreman_strat.h  index_utils.cpp  index_utils.h  multilayers.h  multilayers_berreman.cpp  multilayers_eh.cpp  multilayers_fresnel.cpp  multilayers_ud.cpp  planar_wgd.cpp  planar_wgd.h
src/sensors/: CMakeLists.txt  fieldblock_holder.cpp  s_completion.cpp  s_diffrac.cpp  s_farfield.cpp  s_fieldmap.cpp  s_modes.cpp  s_movie.cpp  s_power.cpp  s_spec_power.cpp  sensors.cpp
src/sources/: CMakeLists.txt  sc_afp_tfsf.cpp  sc_bloch.cpp  sc_electric_dipole.cpp  sc_gaussian_beam.cpp  sc_guided_planar.cpp  sc_oscillator.cpp  sources.cpp
src/structure/: CMakeLists.txt  ageom_converter.cpp  lua_structure.cpp  lua_structure.h  structure.cpp  structure.h  structure_primitives.cpp
(+384 files in other folders)
